# spacecat-caption

./: .gitignore  CLAUDE.md  README.md  bun.lockb  index.html  package.json  vite.config.ts
.github/workflows/: build-macos.yml  build-windows.yml  build.yml
docs/: file-system-architecture.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: commands.rs
src-tauri/src/file_system/: commands.rs
src-tauri/src/media/: commands.rs
src/components/: AppHeader.tsx  CaptionEditor.tsx  EmptyState.tsx  ExportDialog.tsx  FileSidebar.tsx  MediaViewer.tsx  SettingsDialog.tsx
src/components/media-editor/: CropEditor.tsx  RemoveButton.tsx  TrimEditor.tsx  index.ts
src/components/ui/: sonner.tsx  table.tsx
src/hooks/: useFileSystem.ts  useProjectManagement.ts  useSettings.ts
src/lib/: api.ts  fs.ts  logging.ts  media.ts  settings.ts
