[package]
name = "spacecat-caption"
version = "0.1.5"
description = "A Tauri App"
authors = ["markury"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spacecat_caption_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-persisted-scope = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs_extra = "1.3.0"
image = "0.24.7"
base64 = "0.21.5"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.12.12", features = ["gzip", "json", "multipart"] }
tokio = { version = "1.36.0", features = ["fs"] }
zip = "0.6.6"
chrono = "0.4.34"
tempfile = "3.10.1"
once_cell = "1.19.0"
anyhow = "1.0.97"
tauri-plugin-log = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
